k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salma-redis
  namespace: salma-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salma-redis
  template:
    metadata:
      labels:
        app: salma-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command:
            - redis-server
            - --appendonly
            - "yes"
            - --maxmemory
            - "512mb"
            - --maxmemory-policy
            - "allkeys-lru"
          ports:
            - containerPort: 6379

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          volumeMounts:
            - name: redis-data
              mountPath: /data

      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: salma-redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: salma-redis
  namespace: salma-gateway
spec:
  selector:
    app: salma-redis
  ports:
    - port: 6379
      targetPort: 6379
